// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.TagMutability",
  "id": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.TagMutability.MUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.TagMutability.IMMUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
    },
  ],
}
`;

exports[`csharp snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.MUTABLE\\">MUTABLE</a></code> | allow image tags to be overwritten. |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\">IMMUTABLE</a></code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.TagMutability",
  "id": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.TagMutability.MUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.TagMutability.IMMUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
    },
  ],
}
`;

exports[`java snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.MUTABLE\\">MUTABLE</a></code> | allow image tags to be overwritten. |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\">IMMUTABLE</a></code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "aws_cdk.aws_ecr.TagMutability",
  "id": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "aws_cdk.aws_ecr.TagMutability.MUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "aws_cdk.aws_ecr.TagMutability.IMMUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
    },
  ],
}
`;

exports[`python snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.MUTABLE\\">MUTABLE</a></code> | allow image tags to be overwritten. |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\">IMMUTABLE</a></code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "@aws-cdk/aws-ecr.TagMutability",
  "id": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "id": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
    },
  ],
}
`;

exports[`typescript snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.MUTABLE\\">MUTABLE</a></code> | allow image tags to be overwritten. |
| <code><a href=\\"#@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\">IMMUTABLE</a></code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;
